syntax = "proto3";

option go_package = "github.com/Josh0104/distributed-mutual/proto";

service MutualService {
    rpc Join(JoinRequest) returns (JoinResponse);
	rpc Leave(LeaveRequest) returns (LeaveResponse);
	rpc Send (Message) returns (PublishResponse);
    rpc Broadcast (BroadcastSubscription) returns (stream Message);
}

message JoinRequest {
	string nodeName = 1;
}

message JoinResponse {
	string nodeId = 1;
}

message LeaveRequest {
	string senderId = 1;
}

message LeaveResponse {
	string nodeId = 1;
}

message BroadcastSubscription {
	string receiver = 1;
}

message PublishResponse {
	string message = 1;
}

message Message {
	string content = 1;
}